<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oxts_rviz_plugins</name>
  <version>0.0.1</version>
  <description>Show OxTs navstatus</description>
  <maintainer email="oscar.johansson@astazero.com">Oscar Johansson</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz_ogre_vendor</build_depend>

  <build_export_depend>rviz_ogre_vendor</build_export_depend>
  
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>rviz_ogre_vendor</exec_depend>

  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_default_plugins</depend>
  <depend>pluginlib</depend>
  <depend>oxts_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
